--- a/index.html
+++ b/index.html
@@ -1,31 +1,23 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SkillNest</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>SkillNest - Learning Management System for Teachers & Students</title>
+    <link rel="shortcut icon" href="./public/open-book.png" type="image/x-icon">
+    <meta name="description" content="Empowering educators and students with a comprehensive learning management system. Create assignments, conduct exams, track progress, and enhance learning outcomes." />
+    <meta name="author" content="SkillNest Education Platform" />
+    <meta name="keywords" content="learning management system, education, teachers, students, online learning, assignments, exams, LMS" />
 
-    <link rel="stylesheet" href="./css/style.css">
-</head>
-<body>
-    <header>
-        <div nav-left>
-            <img src="" class="logo" alt="Logo Image">
-            <input type="text" name="" id="search" placeholder="Search">
-        </div>
-        <div class="nav">
-            <div class="nav-items">
-                <a href="">Home</a>
-                <a href="">About</a>
-                <a href="">Contact</a>
-          
-        </div>
-    </div>
-    <div class="buttons">
-    <a href=""><button>LogIn</button></a>
-    <a href=""><Button>Register</Button></a>
-</div>
-    </header>
-</body>
+    <meta property="og:title" content="SkillNest - Learning Management System for Teachers & Students" />
+    <meta property="og:description" content="Empowering educators and students with a comprehensive learning management system. Create assignments, conduct exams, track progress, and enhance learning outcomes." />
+    <meta property="og:type" content="website" />
+  
+
+  </head>
+
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
